# ETF_Analyzer-Rust

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  etf_analyzer.toml.example
benches/: correlation_benchmark.rs
example-data/: corn-etf-holdings.csv  imtm-etf-holdings.csv  ivw-etf-holdings.csv  iwf-etf-holdings.csv  vbr-etf-holdings.csv  vtv-etf-holdings.csv
src/: analysis.rs  cli.rs  config.rs  error.rs  io.rs  lib.rs  portfolio.rs  report.rs
tests/: integration_test.rs
