[package]
name = "etf_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line tool for ETF analysis"
license = "MIT"

[dependencies]
polars = { version = "0.44", features = ["lazy", "csv", "parquet"] }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.13"

[[bin]]
name = "etf_analyzer"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
